--- a/secret02/_config.yml
+++ b/secret02/_config.yml
@@ -4,7 +4,6 @@ relative_links:
   enabled: true
   collections: true
 include:
-  - CONTRIBUTING.md
-  - README.md
+  - index.md
 
 theme: jekyll-theme-tactile
